web/static/css/_ncd.scss
// NCD class styles



// ---------materialize reset classes ---------------

.tabs {
  background-color: transparent;
  .tab {

    a {
      @extend .grey-text;
      font-size: .9rem;
      padding: 0 5px;
      &:hover {
        @extend .white-text;
        background-color: transparent;
      }
    }
    &.active {
      background-color: transparent;
      a {
        @extend .white-text;
      }
    }

  }
  .indicator {
    @extend .green;
    height: 6px;
  }
}




// --------- NCD classes ---------------


html, body {
  @extend .grey, .lighten-3;
  height: 100%;
  > main {
    display: inline;
    > div {
      display: inline;
    }
  }
}


.wrapper {
  height: 100%;
  padding-bottom: 100px;
  min-width: 530px;
  & > * > * {
    padding-left: 5%;
    padding-right: 5%;
  }
}

header {
  @extend .grey, .darken-3;

  .logo {
    display: inline-block;
    vertical-align: top;
    text-align: center;
    border-radius: 50%;
    border: 1px solid rgba(255, 255, 255, 0.102);
    width: 60px;
    height: 60px;
    padding-top: 3px;
    margin-right: 20px;
    + a.breadcrumb:before {
      display: none;
    }
  }

  #TopNav {
    border-bottom: 1px solid color("shades", "black");

    ul {
      &:not(.right) {
        margin-left: -15px;
      }
      a {
        @extend .grey-text;
        i.right {
          font-size: 1.6rem;
          margin-left: 5px;
        }
      }
    }
  }

  #Breadcrumb {
    height: auto;
    padding-top: 1rem;
    padding-bottom: 1rem;

    a.breadcrumb {
      font-size: 20px;
      &:first-child {
        @extend .grey-text;
      }
      &:before {
        @extend .black-text;
      }
    }
  }
}

#BottomNav {
  height: auto;
  line-height: 1;
  .row {
    margin-bottom: 0;
  }
}

.content {
  padding: 1rem 0;
}


footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
}



// ------- helper classes

.mtop {
  margin-top: -3rem;
  margin-bottom: 2.5rem;
}

